Fix frontend modal checkbox wrapping

--- a/src/scss/fcnen-frontend.scss
+++ b/src/scss/fcnen-frontend.scss
@@ -39,6 +39,7 @@
 
   &__scopes {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 
     .checkbox-label {
